# throrgan

./: .gitignore  Cargo.toml  foo.thr  foo.txt  readme.md
src/: bin.rs  errors.rs  generator.rs  instrument.py  instrument.rs  lib.py  lib.rs  main.py  mesher.py  output.rs  parse.rs  parser.py
src/instruments/: sine.inst
